--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,20 +1,29 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
+# SPDX-FileCopyrightText: 2024 SUSE LLC
+#
+# SPDX-License-Identifier: BSD3
 
-name: Go
+name: Build
 
 on:
-  push:
-    branches: [ "master" ]
   pull_request:
-    branches: [ "master" ]
+    types:
+      - opened
+      - reopened
+      - synchronize
+  release:
+    types:
+      - published
 
 jobs:
 
   build:
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-tags: true
+        fetch-depth: 0
 
     - name: Set up Go
       uses: actions/setup-go@v4
@@ -23,8 +32,8 @@ jobs:
 
     - name: Build
       run: |
-          mkdir -p ./bin
-          go build -o ./bin/ -v ./...
+        mkdir -p ./bin
+        go build -o ./bin/ -v ./...
 
     - name: Test
       run: go test -v ./...
@@ -34,4 +43,3 @@ jobs:
       with:
         name: binaries
         path: ./bin/*
-
