disable CGO for building binaries

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      CGO_ENABLED: 0
+
     steps:
     - uses: actions/checkout@v4
       with:
